--- a/MVCFizzBuzz/Views/Home/FizzBuzzView.cshtml
+++ b/MVCFizzBuzz/Views/Home/FizzBuzzView.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MVCFizzBuzz.Models.FizzBuzzModel
 
 @{
-    ViewBag.Title = "Index1";
+    ViewBag.Title = "FizzBuzzView";
 }
 
-<h2>Index1</h2>
+<h2>FizzBuzzView</h2>
 
 @foreach (var i in Model.FizzBuzzList)
 {
